--- a/README
+++ b/README
@@ -1,2 +1,31 @@
 
-Basead on https://github.com/thoughtbot/laptop
+Env
+===
+
+Configura ambiente de desenvolvimento da intelie.
+
+Baseado no https://github.com/thoughtbot/laptop
+
+Mac OS X
+--------
+
+TODO: instalar GCC.
+Nota: sem precisar do XCODE -> https://github.com/kennethreitz/osx-gcc-installer
+
+Rodar:
+
+    bash < <(curl -s https://raw.github.com/intelie/environment/master/mac)
+
+Ubuntu
+------
+
+TODO
+
+Lista de componentes instalados
+-------------------------------
+
+* Chaves SSH
+* Homebrew
+* ack
+* RVM
+TODO
